--- a/Makefile.linux-gcc
+++ b/Makefile.linux-gcc
@@ -19,7 +19,7 @@ TOP = ../sqlite
 #### C Compiler and options for use in building executables that
 #    will run on the platform that is doing the build.
 #
-BCC = gcc -g -O0
+BCC = gcc -x none -g -O0
 #BCC = /opt/ancic/bin/c89 -0
 
 #### If the target operating system supports the "usleep()" system
@@ -68,10 +68,10 @@ EXE =
 #    will run on the target platform.  This is usually the same
 #    as BCC, unless you are cross-compiling.
 #
-TCC = gcc -O0
-#TCC = gcc -g -O0 -Wall
-#TCC = gcc -g -O0 -Wall -fprofile-arcs -ftest-coverage
-#TCC = /opt/mingw/bin/i386-mingw32-gcc -O6
+TCC = gcc -x none -O0
+#TCC = gcc -x none -x none -g -O0 -Wall
+#TCC = gcc -x none -x none -g -O0 -Wall -fprofile-arcs -ftest-coverage
+#TCC = /opt/mingw/bin/i386-mingw32-gcc -x none -x none -O6
 #TCC = /opt/ansic/bin/c89 -O +z -Wl,-a,archive
 
 #### Tools used to build a static library.
@@ -81,7 +81,7 @@ AR = ar cr
 RANLIB = ranlib
 #RANLIB = /opt/mingw/bin/i386-mingw32-ranlib
 
-MKSHLIB = gcc -shared
+MKSHLIB = gcc -x none -x none -shared
 SO = so
 SHPREFIX = lib
 # SO = dll
