Simple JIT example works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,29 @@
 project(sqlite)
 cmake_minimum_required(VERSION 3.15)
 
-find_package(LLVM REQUIRED CONFIG)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+find_package(LLVM 9 REQUIRED CONFIG)
 add_definitions(${LLVM_DEFINITIONS})
+link_directories(${LLVM_LIBRARY_DIRS})
+
+# find_package(fmt)
+add_subdirectory(fmt)
+
+# message(${LLVM_LIBRARY_DIRS})
 
 include_directories(${LLVM_INCLUDE_DIRS})
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/src)
+include_directories(${PROJECT_SOURCE_DIR}/thirdparty/codegen/include/)
+include_directories(${PROJECT_SOURCE_DIR}/fmt/include/)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+add_library(codegen
+    ${PROJECT_SOURCE_DIR}/thirdparty/codegen/src/compiler.cpp
+    ${PROJECT_SOURCE_DIR}/thirdparty/codegen/src/module_builder.cpp
+    ${PROJECT_SOURCE_DIR}/thirdparty/codegen/src/statements.cpp
+)
 
 add_library(sqlite
         ${PROJECT_SOURCE_DIR}/src/alter.c 
@@ -120,7 +134,13 @@ add_library(sqlite
         ${PROJECT_SOURCE_DIR}/parse.c
 )
 target_link_libraries(sqlite llvm)
+target_link_libraries(sqlite codegen)
+target_link_libraries(sqlite fmt::fmt)
+
+add_executable(tests_thomas src/jit_compilation.cpp)
+target_link_libraries(tests_thomas llvm)
+target_link_libraries(tests_thomas codegen)
+target_link_libraries(tests_thomas fmt::fmt)
 
 add_executable(shell shell.c)
-# target_link_libraries(shell stdc++)
 target_link_libraries(shell sqlite)
