--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# opcodes.h
+# opcodes.c
+release
+config.status
+config.h
+config.log
+build
+/Makefile
+*.a
+*.la
+fmt
+thirdparty/
+.libs/
+.DS_Store
 *.db
 tsrc
 *.lo
