Added JIT Utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ add_library(sqlite
         ${PROJECT_SOURCE_DIR}/src/write_opcodes.cpp
         ${PROJECT_SOURCE_DIR}/src/thomas.cpp
         ${PROJECT_SOURCE_DIR}/src/type_definitions.cpp
+        ${PROJECT_SOURCE_DIR}/src/jit_utils.cpp
         ${PROJECT_SOURCE_DIR}/src/main_function.cpp
         ${PROJECT_SOURCE_DIR}/src/whereexpr.c
         ${PROJECT_SOURCE_DIR}/src/whereInt.h
