Started working on bytecode conversion

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -1,3 +1,6 @@
+
+file(GLOB LOWERING_FILES "Lowering/*.cpp")
+
 add_mlir_dialect_library(MLIRStandalone
         StandaloneDialect.cpp
         StandaloneOps.cpp
@@ -6,8 +9,7 @@ add_mlir_dialect_library(MLIRStandalone
         StandalonePrerequisites.cpp
         TypeCache.cpp
         TypeDefinitions.cpp
-        Lowering/InitLowering.cpp
-
+        ${LOWERING_FILES}
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Standalone
 
