The Goto operation conversion now works

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(LOWERING_FILES
     Lowering/InitLowering.cpp
-    Lowering/JumpLowering.cpp
+        Lowering/GotoLowering.cpp
     Lowering/NoopLowering.cpp
 )
 
