Implemented lowering for OP_Rewind

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -4,6 +4,7 @@ set(LOWERING_FILES
     Lowering/NoopLowering.cpp
     Lowering/HaltLowering.cpp
     Lowering/OpenReadLowering.cpp
+    Lowering/RewindLowering.cpp
 )
 
 add_mlir_dialect_library(MLIRStandalone
