Added new OPCodes (not all translated yet) Added support for OP_Null De-static-ified a VDBE Internal function Changed the interface of the CallOp wrapper to return an optional

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -9,6 +9,10 @@ set(LOWERING_FILES
     Lowering/ResultRowLowering.cpp
     Lowering/NextLowering.cpp
     Lowering/TransactionLowering.cpp
+    Lowering/AggFinalLowering.cpp
+    Lowering/AggStepLowering.cpp
+    Lowering/NullLowering.cpp
+    Lowering/CopyLowering.cpp
 )
 
 add_mlir_dialect_library(MLIRStandalone
