First TPC-H Benchmark passing. Added a lot of stuff in many places.

--- a/src/mlir/CMakeLists.txt
+++ b/src/mlir/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 set(LLVM_DIR "/Users/kowalski/llvm/")
 set(LLVM_BUILD_DIR "/Users/kowalski/Downloads/llvm-project/build")
-set(PREFIX "/Users/kowalski/llvm")
+set(PREFIX "/Users/kowalski/llvm/usr/local")
 set(MLIR_DIR "${PREFIX}/lib/cmake/mlir")
 set(LLVM_EXTERNAL_LIT "${LLVM_BUILD_DIR}/bin/llvm-lit")
 
@@ -47,7 +47,8 @@ include_directories(${LLVM_INCLUDE_DIRS})
 include_directories(${MLIR_INCLUDE_DIRS})
 # include_directories(${PROJECT_SOURCE_DIR}/include)
 # include_directories(${PROJECT_BINARY_DIR}/include)
-message("Source Dir: '${PROJECT_SOURCE_DIR}', Binary Dir: '${PROJECT_BINARY_DIR}'")
+message("Source Dir: '${PROJECT_SOURCE_DIR}'")
+message("Binary Dir: '${PROJECT_BINARY_DIR}'")
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_BINARY_DIR}/include)
 link_directories(${LLVM_BUILD_LIBRARY_DIR})
@@ -55,6 +56,6 @@ add_definitions(${LLVM_DEFINITIONS})
 
 add_subdirectory(include)
 add_subdirectory(lib)
-add_subdirectory(test)
+# add_subdirectory(test)
 add_subdirectory(standalone-opt)
 add_subdirectory(thomas)
