--- a/src/mlir/CMakeLists.txt
+++ b/src/mlir/CMakeLists.txt
@@ -23,8 +23,13 @@ project(standalone-dialect LANGUAGES CXX C)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_CXX_FLAGS -O0)
-set(CMAKE_C_FLAGS   -O0)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
+set(CMAKE_C_FLAGS   "${CMAKE_CXX_FLAGS} -O0")
+
+if (NOT apple)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__FILE_NAME__=__FILE__")
+  set(CMAKE_C_FLAGS   "${CMAKE_CXX_FLAGS} -D__FILE_NAME__=__FILE__")
+endif()
 
 find_package(MLIR REQUIRED CONFIG)
 
