CMakeLists.txt improvement

--- a/src/mlir/CMakeLists.txt
+++ b/src/mlir/CMakeLists.txt
@@ -1,8 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
 
-set(LLVM_DIR "/Users/kowalski/llvm/")
-set(LLVM_BUILD_DIR "/Users/kowalski/Downloads/llvm-project/build")
-set(PREFIX "/Users/kowalski/llvm/usr/local")
+if(APPLE)
+  set(LLVM_DIR "/Users/kowalski/llvm/")
+  set(LLVM_BUILD_DIR "/Users/kowalski/Downloads/llvm-project/build")
+  set(PREFIX "/Users/kowalski/llvm/usr/local")
+else()
+  set(LLVM_DIR "/home/kowalski/llvm/")
+  set(LLVM_BUILD_DIR "/home/kowalski/llvm-project/build")
+  set(PREFIX "/home/kowalski/libs/usr/local")
+endif()
+
 set(MLIR_DIR "${PREFIX}/lib/cmake/mlir")
 set(LLVM_EXTERNAL_LIT "${LLVM_BUILD_DIR}/bin/llvm-lit")
 
@@ -26,7 +33,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 set(CMAKE_C_FLAGS   "${CMAKE_CXX_FLAGS} -O0")
 
-if (NOT apple)
+if (NOT APPLE)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__FILE_NAME__=__FILE__")
   set(CMAKE_C_FLAGS   "${CMAKE_CXX_FLAGS} -D__FILE_NAME__=__FILE__")
 endif()
@@ -63,5 +70,5 @@ add_definitions(${LLVM_DEFINITIONS})
 add_subdirectory(include)
 add_subdirectory(lib)
 # add_subdirectory(test)
-add_subdirectory(standalone-opt)
+# add_subdirectory(standalone-opt)
 add_subdirectory(thomas)
