Moved AssertOperator implementation to a CPP file

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(LOWERING_FILES
     Lowering/MyBuilder.cpp
     Lowering/Printer.cpp
+    Lowering/AssertOperator.cpp
 
     Lowering/AggFinalLowering.cpp
     Lowering/AggStepLowering.cpp
