Added unique executable for profiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,3 +148,10 @@ target_link_libraries(shell_default sqlite)
 target_link_libraries(shell_default vdbe_exec_default)
 target_link_libraries(shell_default ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(shell_default ${CMAKE_DL_LIBS})
+
+add_executable(profilable_shell shell.c)
+target_link_libraries(shell_jit sqlite)
+target_link_libraries(shell_jit vdbe_exec_llvm)
+target_link_libraries(shell_jit sqlite_llvm)
+target_link_libraries(shell_jit ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(shell_jit ${CMAKE_DL_LIBS})
