Fixed executable entry for profilable_shell in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,8 +150,8 @@ target_link_libraries(shell_default ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(shell_default ${CMAKE_DL_LIBS})
 
 add_executable(profilable_shell shell.c)
-target_link_libraries(shell_jit sqlite)
-target_link_libraries(shell_jit vdbe_exec_llvm)
-target_link_libraries(shell_jit sqlite_llvm)
-target_link_libraries(shell_jit ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(shell_jit ${CMAKE_DL_LIBS})
+target_link_libraries(profilable_shell sqlite)
+target_link_libraries(profilable_shell vdbe_exec_llvm)
+target_link_libraries(profilable_shell sqlite_llvm)
+target_link_libraries(profilable_shell ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(profilable_shell ${CMAKE_DL_LIBS})
