Inlined out2Prerelease in JITted code

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -40,6 +40,7 @@ set(LOWERING_FILES
     Lowering/IfLowering.cpp
     Lowering/OnceLowering.cpp
     Lowering/FunctionLowering.cpp
+    Lowering/OutToPrerelease.cpp
 )
 
 add_mlir_dialect_library(MLIRStandalone
