Moved GetVarint32 implementation to a separate CPP file

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -3,6 +3,7 @@ set(LOWERING_FILES
     Lowering/Operators/Printer.cpp
     Lowering/Operators/AssertOperator.cpp
     Lowering/Operators/OutToPrerelease.cpp
+    Lowering/Operators/GetVarint32.cpp
     Lowering/Operators/NumericType.cpp
 
     Lowering/AggFinalLowering.cpp
