Started moving IntToPtr's to GetElementrPtr's

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LOWERING_FILES
     Lowering/Operators/OutToPrerelease.cpp
     Lowering/Operators/GetVarint32.cpp
     Lowering/Operators/NumericType.cpp
+    Lowering/Operators/ConstantManager.cpp
 
     Lowering/AggFinalLowering.cpp
     Lowering/AggStepLowering.cpp
