Added new opcodes for TPC-H 14, but I have a seg fault right now

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -53,6 +53,10 @@ set(LOWERING_FILES
     Lowering/IdxCompareLowering.cpp
     Lowering/DeleteLowering.cpp
     Lowering/IdxInsertLowering.cpp
+    Lowering/RowidLowering.cpp
+    Lowering/RowSetTestLowering.cpp
+    Lowering/NotFoundLowering.cpp
+    Lowering/AffinityLowering.cpp
 )
 
 add_mlir_dialect_library(MLIRStandalone
